--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
     "@types/node": "^24.2.0",
+    "csv-parse": "^5.5.6",
+    "openai": "^4.67.1",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
