--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests --coverage",
+    "test:unit": "jest tests/unit --passWithNoTests --coverage",
+    "test:integration": "dotenv -e .env.local -- jest tests/integration --passWithNoTests",
+    "test:db": "dotenv -e .env.local -- jest tests/db.*.test.ts --passWithNoTests",
+    "test": "npm run test:unit && npm run test:integration && npm run test:db",
+    "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts,.tsx",
     "seed": "dotenv -e .env.local -- tsx scripts/seedHierarchicalIngredients.ts"
   },
@@ -17,20 +21,50 @@
     "@supabase/supabase-js": "^2.53.0",
     "@types/node": "^24.2.0",
     "csv-parse": "^5.5.6",
+    "cross-fetch": "^4.1.0",
+    "dotenv": "^17.2.1",
+    "dotenv-cli": "^10.0.0",
     "openai": "^4.67.1",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "projects": [
+      {
+        "displayName": "unit",
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "testMatch": ["<rootDir>/tests/unit/**/*.test.ts"],
+        "setupFiles": ["<rootDir>/jest.setup.ts"],
+        "setupFilesAfterEnv": ["<rootDir>/tests/unit/jest.setup.ts"]
+      },
+      {
+        "displayName": "integration",
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "testMatch": ["<rootDir>/tests/integration/**/*.test.ts"],
+        "setupFiles": ["<rootDir>/jest.setup.ts"],
+        "setupFilesAfterEnv": ["<rootDir>/tests/integration/jest.setup.ts"]
+      },
+      {
+        "displayName": "db",
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "testMatch": ["<rootDir>/tests/db.*.test.ts"],
+        "setupFiles": ["<rootDir>/jest.setup.ts"]
+      }
+    ]
+  },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
-    "dotenv": "^17.2.1",
-    "dotenv-cli": "^10.0.0",
-    "eslint": "^9.32.0",
-    "jest": "^30.0.5",
-    "ts-jest": "^29.4.1",
+    "eslint": "^9.15.0",
+    "jest": "^30.0.0",
+    "ts-jest": "^30.0.0",
     "tsx": "^4.20.3"
   }
 }
